--- a/Abstractions/UIConcept/UIConcept.csproj
+++ b/Abstractions/UIConcept/UIConcept.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -59,6 +59,7 @@
       <Generator>TextTemplatingFileGenerator</Generator>
       <LastGenOutput>ExampleUI_1.html</LastGenOutput>
     </None>
+    <None Include="UIConcept\CommonTemplates.ttinclude" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -66,6 +67,8 @@
   <ItemGroup>
     <Content Include="Options.xml" />
     <Content Include="UIConcept\ExampleUI_1.html">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
       <DependentUpon>ExampleUI_1.tt</DependentUpon>
     </Content>
   </ItemGroup>
