--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -40,15 +40,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="ServiceLayer\Out\ServiceClient_CSharp_v1_0.designer.cs" />
+    <None Include="ServiceLayer\Out\ServiceContract_CSharp_v1_0.designer.cs" />
+    <None Include="ServiceLayer\Out\ServiceServer_CSharp_v1_0.designer.cs" />
     <Content Include="absbuilder\Out\Builder.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Content Include="ServiceLayer\In\Content_v1_0\CaloomServiceLayer.xml" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="absbuilder\In\Content_v1_0\AbstractionBuilderContent_v1_0.xml">
       <SubType>Designer</SubType>
     </Content>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="ClassModel\In\Content_v1_0\" />
+    <Folder Include="ClassModel\Out\" />
+  </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
