Synced Caloom with UI and ClassModel submodule changes

--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -40,7 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="ClassModel\In\ClassModelFromCaloomStdUI.xml" />
+    <Content Include="ClassModel\In\ClassModelFromCaloomStdUI.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="UserInterface\In\CaloomStdUI.xml" />
     <None Include="ServiceLayer\Out\ServiceClient_CSharp_v1_0.designer.cs" />
     <None Include="ServiceLayer\Out\ServiceContract_CSharp_v1_0.designer.cs" />
