Added details demo and modified the index

--- a/Apps/CaloomMVC/CaloomMVC.csproj
+++ b/Apps/CaloomMVC/CaloomMVC.csproj
@@ -133,6 +133,8 @@
     <Content Include="Content\themes\base\images\ui-icons_888888_256x240.png" />
     <Content Include="Content\themes\base\images\ui-icons_cd0a0a_256x240.png" />
     <Content Include="OpenIDLogin.aspx" />
+    <Content Include="Statichtml\details.html" />
+    <Content Include="Statichtml\index.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
