Added demo content for generator output

--- a/Apps/CaloomMVC/CaloomMVC.csproj
+++ b/Apps/CaloomMVC/CaloomMVC.csproj
@@ -116,6 +116,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="CaloomGenhtml\details.html" />
+    <Content Include="CaloomGenhtml\index.html" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Content\themes\base\jquery-ui.css" />
