--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -43,8 +43,12 @@
     <Content Include="ClassModel\In\ClassModelFromCaloomStdUI.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="ObjectRelational\In\Content_v1_0\CaloomDatabase_v1_0.xml" />
-    <Content Include="UserInterface\In\CaloomStdUI.xml" />
+    <Content Include="ObjectRelational\In\Content_v1_0\CaloomDatabase_v1_0.xml">
+      <SubType>Designer</SubType>
+    </Content>
+    <Content Include="UserInterface\In\Content_v1_0\CaloomStdUI.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <None Include="ServiceLayer\Out\ServiceClient_CSharp_v1_0.designer.cs" />
     <None Include="ServiceLayer\Out\ServiceContract_CSharp_v1_0.designer.cs" />
     <None Include="ServiceLayer\Out\ServiceServer_CSharp_v1_0.designer.cs" />
