--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
   <repository path="..\Apps\CaloomMVC\packages.config" />
+  <repository path="..\Apps\CaloomWorkerRole\packages.config" />
   <repository path="..\CaloomMvcWebRole\packages.config" />
+  <repository path="..\CaloomWorkerRole\packages.config" />
+  <repository path="..\WorkerRoleWithSBQueue1\packages.config" />
 </repositories>
