Added Azure upload tool and concept test web roles

--- a/Apps/CaloomMVC/CaloomMVC.csproj
+++ b/Apps/CaloomMVC/CaloomMVC.csproj
@@ -135,8 +135,6 @@
     <Content Include="Content\themes\base\images\ui-icons_888888_256x240.png" />
     <Content Include="Content\themes\base\images\ui-icons_cd0a0a_256x240.png" />
     <Content Include="OpenIDLogin.aspx" />
-    <Content Include="Statichtml\details.html" />
-    <Content Include="Statichtml\index.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -173,6 +171,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Properties\PublishProfiles\theball - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\theball - Web Deploy.pubxml" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
