--- a/Apps/CaloomMvcWebRole/Web.config
+++ b/Apps/CaloomMvcWebRole/Web.config
@@ -19,6 +19,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.0">
       <assemblies>
         <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
@@ -28,8 +29,10 @@
         <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
       </assemblies>
     </compilation>
-    <authentication mode="Forms">
+    <authentication mode="None">
+      <!--
       <forms loginUrl="~/Account/LogOn" timeout="2880" />
+      -->
     </authentication>
     <pages>
       <namespaces>
