--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -4,5 +4,6 @@
   <repository path="..\Apps\CaloomWorkerRole\packages.config" />
   <repository path="..\CaloomMvcWebRole\packages.config" />
   <repository path="..\CaloomWorkerRole\packages.config" />
+  <repository path="..\TestAspNetWebRole1\packages.config" />
   <repository path="..\WorkerRoleWithSBQueue1\packages.config" />
 </repositories>
