Added TheBallCoreABS submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -31,3 +31,6 @@
 [submodule "Apps/WorkerTemplate/CaloomUI"]
 	path = Apps/WorkerTemplate/CaloomUI
 	url = git://github.com/kallex/CaloomUI.git
+[submodule "Abstractions/TheBallCoreABS"]
+	path = Abstractions/TheBallCoreABS
+	url = git://github.com/abstractiondev/TheBallCoreABS
