--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
-  http://go.microsoft.com/fwlink/?LinkId=152368
+  http://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <configSections>
@@ -12,50 +12,45 @@
       <section name="oauth" type="DotNetOpenAuth.Configuration.OAuthElement, DotNetOpenAuth.OAuth" requirePermission="false" allowLocation="true" />
     </sectionGroup>
   </configSections>
-  <appSettings>
-    <add key="ClientValidationEnabled" value="true" />
-    <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-  </appSettings>
   <system.web>
-    <compilation debug="true" targetFramework="4.0">
-      <assemblies>
-        <add assembly="System.Web.Abstractions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Helpers, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Routing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.Mvc, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-        <add assembly="System.Web.WebPages, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
-      </assemblies>
-    </compilation>
+    <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
-      <forms loginUrl="~/Account/LogOn" timeout="2880" />
+      <forms loginUrl="TheBallLogin.aspx" timeout="2880" />
     </authentication>
-    <pages>
-      <namespaces>
-        <add namespace="System.Web.Helpers" />
-        <add namespace="System.Web.Mvc" />
-        <add namespace="System.Web.Mvc.Ajax" />
-        <add namespace="System.Web.Mvc.Html" />
-        <add namespace="System.Web.Routing" />
-        <add namespace="System.Web.WebPages" />
-      </namespaces>
-    </pages>
+    <authorization>
+    </authorization>
   </system.web>
+  <location path="theballanon">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <location path="theballauth">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
+
   <system.webServer>
+    <!--
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
+    -->
+    <defaultDocument>
+      <files>
+        <clear />
+        <add value="theballanon/default-landing-page.html" />
+      </files>
+    </defaultDocument>
     <handlers>
-      <add name="AuthorizedBlobStorageHandler" path="*.txt" verb="*" type="CaloomMVC.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandler" path="theballanon/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AuthorizedBlobStorageHandler" path="theballauth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
     </handlers>
   </system.webServer>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-2.0.0.0" newVersion="3.0.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-    <legacyHMACWarning enabled="0" />
-  </runtime>
   <system.net>
     <defaultProxy enabled="true" />
     <settings>
@@ -65,6 +60,10 @@
       <!--<servicePointManager checkCertificateRevocationList="true"/>-->
     </settings>
   </system.net>
+  <runtime>
+    <!-- This prevents the Windows Event Log from frequently logging that HMAC1 is being used (when the other party needs it). -->
+    <legacyHMACWarning enabled="0" />
+  </runtime>
   <dotNetOpenAuth>
     <messaging>
       <untrustedWebRequest>
@@ -81,7 +80,7 @@
         <security requireSsl="false">
           <!-- Uncomment the trustedProviders tag if your relying party should only accept positive assertions from a closed set of OpenID Providers. -->
           <!--<trustedProviders rejectAssertionsFromUntrustedProviders="true">
-						<add endpoint="https://www.google.com/accounts/o8/ud" />
+						<add endpoint="https://www.google.com/accounts/o8/id" />
 					</trustedProviders>-->
         </security>
         <behaviors>
@@ -90,16 +89,12 @@
           <add type="DotNetOpenAuth.OpenId.RelyingParty.Behaviors.AXFetchAsSregTransform, DotNetOpenAuth.OpenId.RelyingParty" />
         </behaviors>
       </relyingParty>
-      <provider></provider>
     </openid>
   </dotNetOpenAuth>
   <uri>
-    <!-- See an error due to this section?  When targeting .NET 3.5, please add the following line to your <configSections> at the top of this file:
-		<section name="uri" type="System.Configuration.UriSection, System, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-		-->
     <!-- The uri section is necessary to turn on .NET 3.5 support for IDN (international domain names),
-	     which is necessary for OpenID urls with unicode characters in the domain/host name. 
-	     It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
+		     which is necessary for OpenID urls with unicode characters in the domain/host name.
+		     It is also required to put the Uri class into RFC 3986 escaping mode, which OpenID and OAuth require. -->
     <idn enabled="All" />
     <iriParsing enabled="true" />
   </uri>
