--- a/packages/repositories.config
+++ b/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\Apps\CaloomMVC\packages.config" />
   <repository path="..\Apps\CaloomWorkerRole\packages.config" />
+  <repository path="..\Apps\WebInterface\packages.config" />
   <repository path="..\CaloomMvcWebRole\packages.config" />
   <repository path="..\CaloomWorkerRole\packages.config" />
   <repository path="..\TestAspNetWebRole1\packages.config" />
