--- a/Apps/WebInterface/packages.config
+++ b/Apps/WebInterface/packages.config
@@ -7,4 +7,6 @@
   <package id="DotNetOpenAuth.OAuth.Core" version="4.1.0.12182" targetFramework="net40" />
   <package id="DotNetOpenAuth.OpenId.Core" version="4.1.0.12182" targetFramework="net40" />
   <package id="DotNetOpenAuth.OpenId.RelyingParty" version="4.1.0.12182" targetFramework="net40" />
+  <package id="Microsoft.WindowsAzure.ConfigurationManager" version="1.7.0.0" targetFramework="net40" />
+  <package id="WindowsAzure.Storage" version="1.7.0.0" targetFramework="net40" />
 </packages>
