--- a/Abstractions/AbstractionContent/AbstractionContent.csproj
+++ b/Abstractions/AbstractionContent/AbstractionContent.csproj
@@ -40,14 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="TheBallCore\Out\OIPBallInstance.designer.cs" />
     <Content Include="ClassModel\In\ClassModelFromCaloomStdUI.xml">
       <SubType>Designer</SubType>
     </Content>
     <Content Include="ObjectRelational\In\Content_v1_0\CaloomDatabase_v1_0.xml">
       <SubType>Designer</SubType>
     </Content>
-    <Content Include="TheBallCore\In\Content_v1_0\OIPBallInstance.xml">
+    <Content Include="TheBallCore\In\Content_v1_0\OIPBallInstance.xml" />
+    <Content Include="TheBallCore\OIPBallInstance.xml">
       <SubType>Designer</SubType>
     </Content>
     <None Include="ServiceLayer\Out\ServiceClient_CSharp_v1_0.designer.cs" />
@@ -65,6 +65,7 @@
     <Folder Include="ClassModel\Out\" />
     <Folder Include="Operation\In\" />
     <Folder Include="Operation\Out\" />
+    <Folder Include="TheBallCore\Out\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
