--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -55,10 +55,12 @@
       <Link>Abstractions\OIPBallInstance.designer.cs</Link>
     </Compile>
     <Compile Include="EmailSupport.cs" />
+    <Compile Include="ErrorItem.cs" />
     <Compile Include="IPublisher.cs" />
     <Compile Include="Operation\UpdatePageContentImplementation.cs" />
     <Compile Include="QueueSupport.cs" />
     <Compile Include="RenderWebSupport.cs" />
+    <Compile Include="StackContextItem.cs" />
     <Compile Include="StorageSupport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubscribeSupport.cs" />
