Separated handlers for anon, auth and email validation

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -47,8 +47,9 @@
       </files>
     </defaultDocument>
     <handlers>
-      <add name="AnonymousBlobStorageHandler" path="theballanon/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandler" path="theballanon/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AuthorizedBlobStorageHandler" path="theballauth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
+      <add name="EmailValidationHandler" path="theballemailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified" />
     </handlers>
   </system.webServer>
   <system.net>
