--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -15,40 +15,39 @@
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
     <authentication mode="Forms">
-      <forms loginUrl="TheBallLogin.aspx" timeout="2880" />
+      <forms loginUrl="TheBallLogin.aspx" timeout="2880" defaultUrl="auth/personal/oip-auth-landing-page.phtml" />
     </authentication>
     <authorization>
     </authorization>
   </system.web>
-  <location path="theballanon">
+  <location path="anon">
     <system.web>
       <authorization>
         <allow users="*"/>
       </authorization>
     </system.web>
   </location>
-  <location path="theballauth">
+  <location path="auth">
     <system.web>
       <authorization>
         <deny users="?"/>
       </authorization>
     </system.web>
   </location>
-
   <system.webServer>
     <!--
     <validation validateIntegratedModeConfiguration="false" />
     <modules runAllManagedModulesForAllRequests="true" />
     -->
-    <defaultDocument>
+    <defaultDocument enabled="true">
       <files>
         <clear />
-        <add value="theballanon/oip-layouts/oip-edit-default-layout-jeroen.html" />
+        <add value="Default.aspx" />
       </files>
     </defaultDocument>
     <handlers>
-      <add name="AnonymousBlobStorageHandler" path="theballanon/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
-      <add name="AuthorizedBlobStorageHandler" path="theballauth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandler" path="anon/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AuthorizedBlobStorageHandler" path="auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
       <add name="EmailValidationHandler" path="theballemailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified" />
     </handlers>
   </system.webServer>
