--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -56,6 +56,7 @@
     </Compile>
     <Compile Include="EmailSupport.cs" />
     <Compile Include="ErrorItem.cs" />
+    <Compile Include="IContainerOwner.cs" />
     <Compile Include="IPublisher.cs" />
     <Compile Include="Operation\UpdatePageContentImplementation.cs" />
     <Compile Include="QueueSupport.cs" />
@@ -64,6 +65,9 @@
     <Compile Include="StorageSupport.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SubscribeSupport.cs" />
+    <Compile Include="TBAccount.cs" />
+    <Compile Include="TBCollaboratingGroup.cs" />
+    <Compile Include="TBRLoginGroupRoot.cs" />
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
