--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -48,7 +48,7 @@
     <handlers>
       <add name="AnonymousBlobStorageHandler" path="anon/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AuthorizedBlobStorageHandler" path="auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
-      <add name="EmailValidationHandler" path="theballemailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified" />
+      <add name="EmailValidationHandler" path="emailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified" />
     </handlers>
   </system.webServer>
   <system.net>
