--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -14,6 +14,7 @@
   </configSections>
   <system.web>
     <compilation debug="true" targetFramework="4.0" />
+    <customErrors mode="Off" />
     <authentication mode="Forms">
       <forms loginUrl="TheBallLogin.aspx" timeout="2880" defaultUrl="auth/personal/oip-auth-landing-page.phtml" />
     </authentication>
