Storage saves implemented

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -63,6 +63,7 @@
     <Compile Include="IPublisher.cs" />
     <Compile Include="Operation\UpdatePageContentImplementation.cs" />
     <Compile Include="Partials\InformationSource.cs" />
+    <Compile Include="Partials\InformationSourceCollection.cs" />
     <Compile Include="Partials\TBLoginInfo.cs" />
     <Compile Include="Partials\TBPRegisterEmail.cs" />
     <Compile Include="Partials\TBREmailRoot.cs" />
