--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -35,6 +35,13 @@
       </authorization>
     </system.web>
   </location>
+  <location path="emailvalidation">
+    <system.web>
+      <authorization>
+        <deny users="?"/>
+      </authorization>
+    </system.web>
+  </location>
   <system.webServer>
     <!--
     <validation validateIntegratedModeConfiguration="false" />
