--- a/Tools/TheBallTool/TheBallTool.csproj
+++ b/Tools/TheBallTool/TheBallTool.csproj
@@ -58,6 +58,9 @@
     <None Include="app.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PreBuildEvent>copy "$(SolutionDir)Apps\WorkerTemplate\CaloomUI\caloomxml\OIPBallInstance.xml" "$(SolutionDir)Abstractions\AbstractionContent\TheBallCore\In\Content_v1_0\"</PreBuildEvent>
+  </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
