--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -67,8 +67,10 @@
     <Compile Include="Partials\InformationSource.cs" />
     <Compile Include="Partials\InformationSourceCollection.cs" />
     <Compile Include="Partials\TBLoginInfo.cs" />
+    <Compile Include="Partials\TBLoginRoot.cs" />
     <Compile Include="Partials\TBPRegisterEmail.cs" />
     <Compile Include="Partials\TBREmailRoot.cs" />
+    <Compile Include="Partials\TBSystem.cs" />
     <Compile Include="QueueSupport.cs" />
     <Compile Include="RenderWebSupport.cs" />
     <Compile Include="StackContextItem.cs" />
