--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -16,12 +16,12 @@
     <compilation debug="true" targetFramework="4.0" />
     <customErrors mode="Off" />
     <authentication mode="Forms">
-      <forms loginUrl="TheBallLogin.aspx" timeout="2880" defaultUrl="auth/personal/oip-auth-landing-page.phtml" />
+      <forms loginUrl="public/grp/default/livepubsite/oip-public/oip-layout-register.phtml" timeout="2880" defaultUrl="auth/personal/oip-auth-landing-page.phtml" />
     </authentication>
     <authorization>
     </authorization>
   </system.web>
-  <location path="anon">
+  <location path="public">
     <system.web>
       <authorization>
         <allow users="*"/>
@@ -54,7 +54,7 @@
       </files>
     </defaultDocument>
     <handlers>
-      <add name="AnonymousBlobStorageHandler" path="anon/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
+      <add name="AnonymousBlobStorageHandler" path="public/*" verb="*" type="WebInterface.AnonymousBlobStorageHandler" resourceType="Unspecified" />
       <add name="AuthorizedBlobStorageHandler" path="auth/*" verb="*" type="WebInterface.AuthorizedBlobStorageHandler" resourceType="Unspecified" />
       <add name="EmailValidationHandler" path="emailvalidation/*" verb="*" type="WebInterface.EmailValidationHandler" resourceType="Unspecified" />
     </handlers>
