Changed the default page to index.aspx, fixed the remote rendering of templates

--- a/Apps/WebInterface/Web.config
+++ b/Apps/WebInterface/Web.config
@@ -50,7 +50,7 @@
     <defaultDocument enabled="true">
       <files>
         <clear />
-        <add value="Default.aspx" />
+        <add value="index.aspx" />
       </files>
     </defaultDocument>
     <handlers>
