Email validation works (removal still due, as generic delete functionality)

--- a/Apps/AzureSupport/AzureSupport.csproj
+++ b/Apps/AzureSupport/AzureSupport.csproj
@@ -64,6 +64,7 @@
     <Compile Include="IPublisher.cs" />
     <Compile Include="Operation\UpdatePageContentImplementation.cs" />
     <Compile Include="Partials\AccountContainer.cs" />
+    <Compile Include="Partials\AddEmailAddressInfo.cs" />
     <Compile Include="Partials\AddLocationInfo.cs" />
     <Compile Include="Partials\CreateGroupInfo.cs" />
     <Compile Include="Partials\GroupContainer.cs" />
